[package]
name = "yyy"
version = "0.1.0"
authors = ["kasoushu <kasoushu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew="0.17"
wasm-bindgen="^0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.3"